# tickwise

./: README.md  main.py  pyproject.toml
migrations/: 0001_initial.py  0002_trade_entry_grade.py  0003_ticker_timeframe_trade_exit_grade_trade_stop_price_and_more.py  0004_trade_entered_at_trade_exited_at.py  0005_alter_trade_entry_price_alter_trade_exit_price_and_more.py  0006_trade_check_valid_long_prices.py  0007_trade_check_valid_entry_stop_price.py  0008_remove_trade_check_valid_long_prices_and_more.py  0009_remove_trade_check_valid_long_entry_and_stop_price_and_more.py  0010_alter_trade_ticker_alter_trade_trigger_timeframe.py  0011_alter_trade_exit_price.py  0012_alter_trade_exited_at.py  0013_trade_actual_r_trade_is_winner_trade_planned_r.py
templates/: index.html
